# Simple_Compiler_with_cpp

./: CMakeLists.txt  README.md  ast.cpp  functions.cpp  grammer.txt  lexer.cpp  main.cpp  parser.cpp  read_ast.cpp  symbol.cpp  test.txt  tokens.h  var.cpp
